<resources>
    <string name="app_name">ManaagementApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="date">date</string>
    <string name="Add">Add</string>
    <string name="new_project">New Project</string>
    <string name="mobile_development_assigment">mobile development assigment</string>
    <string name="Goals">Goal</string>
    <string name="Description">Description</string>
    <string name="ProjectName">Project name</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="projectNameView">projectNameView</string>
    <string name="goal">Goal</string>
    <string name="enddate">endDate</string>

</resources>