<?xml version="1.0" encoding="utf-8"?>
    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:alpha="0.8"
        android:orientation="vertical"
        android:outlineSpotShadowColor="#A3A1A1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#AE87FA">

            <TextView
                android:id="@+id/ProjectNameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="23dp"
                android:text="@string/projectNameView"
                android:textSize="35sp"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp">

            <TextView
                android:id="@+id/DescriptionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="20dp"
                android:text="@string/Description"
                android:textSize="19sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp">

            <TextView
                android:id="@+id/GoalView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="23dp"
                android:text="@string/goal"
                android:textSize="17sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="155dp">

            <TextView
                android:id="@+id/StartDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="23dp"
                android:text="@string/StartDate"
                android:textSize="17sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="192dp">

            <TextView
                android:id="@+id/EndDateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="23dp"
                android:text="@string/enddate"
                android:textSize="17sp" />
        </TableRow>
    </androidx.cardview.widget.CardView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
